added another check

--- a/4_Use_cases.ipynb
+++ b/4_Use_cases.ipynb
@@ -226,6 +226,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check with a mostly energetic playlist"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -836,6 +843,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check with a mostly energetic album"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1324,12 +1338,237 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_artist_class(url):"
+    "#### Check with a non energetic album"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>first_artist</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>type</th>\n",
+       "      <th>id</th>\n",
+       "      <th>uri</th>\n",
+       "      <th>track_href</th>\n",
+       "      <th>analysis_url</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>pred</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7cs7MLtAWvsdf3w5kBvfK2</td>\n",
+       "      <td>Nothing's Gonna Hurt You Baby</td>\n",
+       "      <td>Cigarettes After Sex</td>\n",
+       "      <td>0.508</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-14.071</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0265</td>\n",
+       "      <td>0.259</td>\n",
+       "      <td>...</td>\n",
+       "      <td>96.818</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>7cs7MLtAWvsdf3w5kBvfK2</td>\n",
+       "      <td>spotify:track:7cs7MLtAWvsdf3w5kBvfK2</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/7cs7MLtAWvsd...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/7cs7...</td>\n",
+       "      <td>286293</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Not Energetic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>73ptBTOgUcD3Wyrq0B9eAW</td>\n",
+       "      <td>I'm a Firefighter</td>\n",
+       "      <td>Cigarettes After Sex</td>\n",
+       "      <td>0.361</td>\n",
+       "      <td>0.300</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-13.657</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0335</td>\n",
+       "      <td>0.483</td>\n",
+       "      <td>...</td>\n",
+       "      <td>114.941</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>73ptBTOgUcD3Wyrq0B9eAW</td>\n",
+       "      <td>spotify:track:73ptBTOgUcD3Wyrq0B9eAW</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/73ptBTOgUcD3...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/73pt...</td>\n",
+       "      <td>271019</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Not Energetic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5DZNSYxhFA1WA9WEJg9TNY</td>\n",
+       "      <td>Dreaming of You</td>\n",
+       "      <td>Cigarettes After Sex</td>\n",
+       "      <td>0.298</td>\n",
+       "      <td>0.398</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-14.911</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0365</td>\n",
+       "      <td>0.549</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64.135</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>5DZNSYxhFA1WA9WEJg9TNY</td>\n",
+       "      <td>spotify:track:5DZNSYxhFA1WA9WEJg9TNY</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/5DZNSYxhFA1W...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/5DZN...</td>\n",
+       "      <td>322219</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Not Energetic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3YL4zMqcyFu0OfLI1sZ66Z</td>\n",
+       "      <td>Starry Eyes</td>\n",
+       "      <td>Cigarettes After Sex</td>\n",
+       "      <td>0.419</td>\n",
+       "      <td>0.362</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-15.320</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0337</td>\n",
+       "      <td>0.453</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.264</td>\n",
+       "      <td>audio_features</td>\n",
+       "      <td>3YL4zMqcyFu0OfLI1sZ66Z</td>\n",
+       "      <td>spotify:track:3YL4zMqcyFu0OfLI1sZ66Z</td>\n",
+       "      <td>https://api.spotify.com/v1/tracks/3YL4zMqcyFu0...</td>\n",
+       "      <td>https://api.spotify.com/v1/audio-analysis/3YL4...</td>\n",
+       "      <td>206000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Not Energetic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 track_id                     track_name  \\\n",
+       "0  7cs7MLtAWvsdf3w5kBvfK2  Nothing's Gonna Hurt You Baby   \n",
+       "1  73ptBTOgUcD3Wyrq0B9eAW              I'm a Firefighter   \n",
+       "2  5DZNSYxhFA1WA9WEJg9TNY                Dreaming of You   \n",
+       "3  3YL4zMqcyFu0OfLI1sZ66Z                    Starry Eyes   \n",
+       "\n",
+       "           first_artist  danceability  energy  key  loudness  mode  \\\n",
+       "0  Cigarettes After Sex         0.508   0.330    4   -14.071     1   \n",
+       "1  Cigarettes After Sex         0.361   0.300    7   -13.657     1   \n",
+       "2  Cigarettes After Sex         0.298   0.398    7   -14.911     1   \n",
+       "3  Cigarettes After Sex         0.419   0.362    2   -15.320     1   \n",
+       "\n",
+       "   speechiness  acousticness  ...    tempo            type  \\\n",
+       "0       0.0265         0.259  ...   96.818  audio_features   \n",
+       "1       0.0335         0.483  ...  114.941  audio_features   \n",
+       "2       0.0365         0.549  ...   64.135  audio_features   \n",
+       "3       0.0337         0.453  ...  100.264  audio_features   \n",
+       "\n",
+       "                       id                                   uri  \\\n",
+       "0  7cs7MLtAWvsdf3w5kBvfK2  spotify:track:7cs7MLtAWvsdf3w5kBvfK2   \n",
+       "1  73ptBTOgUcD3Wyrq0B9eAW  spotify:track:73ptBTOgUcD3Wyrq0B9eAW   \n",
+       "2  5DZNSYxhFA1WA9WEJg9TNY  spotify:track:5DZNSYxhFA1WA9WEJg9TNY   \n",
+       "3  3YL4zMqcyFu0OfLI1sZ66Z  spotify:track:3YL4zMqcyFu0OfLI1sZ66Z   \n",
+       "\n",
+       "                                          track_href  \\\n",
+       "0  https://api.spotify.com/v1/tracks/7cs7MLtAWvsd...   \n",
+       "1  https://api.spotify.com/v1/tracks/73ptBTOgUcD3...   \n",
+       "2  https://api.spotify.com/v1/tracks/5DZNSYxhFA1W...   \n",
+       "3  https://api.spotify.com/v1/tracks/3YL4zMqcyFu0...   \n",
+       "\n",
+       "                                        analysis_url duration_ms  \\\n",
+       "0  https://api.spotify.com/v1/audio-analysis/7cs7...      286293   \n",
+       "1  https://api.spotify.com/v1/audio-analysis/73pt...      271019   \n",
+       "2  https://api.spotify.com/v1/audio-analysis/5DZN...      322219   \n",
+       "3  https://api.spotify.com/v1/audio-analysis/3YL4...      206000   \n",
+       "\n",
+       "  time_signature pred          class  \n",
+       "0              4    0  Not Energetic  \n",
+       "1              4    0  Not Energetic  \n",
+       "2              3    0  Not Energetic  \n",
+       "3              4    0  Not Energetic  \n",
+       "\n",
+       "[4 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "album2 = get_album_class(\"https://open.spotify.com/album/12UGkXT4z3ajgq6xheCGDk?si=0lHB1uVCT06mxtHGZDUpoQ\")\n",
+    "album2['dataframe']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "album2['prop']"
    ]
   },
   {
