--- a/2_EDA_and_Modelling.ipynb
+++ b/2_EDA_and_Modelling.ipynb
@@ -1912,9 +1912,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spotify",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "spotify"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1926,7 +1926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
