--- a/4_Use_cases.ipynb
+++ b/4_Use_cases.ipynb
@@ -1991,9 +1991,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "spotify",
    "language": "python",
-   "name": "python3"
+   "name": "spotify"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2005,7 +2005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
